force-app/main/default/objects/Lead_History__c/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>