force-app/main/default/objects/Lead_History__c/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Lead Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>