force-app/main/default/objects/Lead_History__c/fields/Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rating__c</fullName>
    <label>Lead Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>